name:                   qqlele
version:                0.0.1.0
license:                BSD3
license-file:           LICENSE
author:                 Frano Perleta
maintainer:             frane.perleta@gmail.com
build-type:             Simple
cabal-version:          >=1.8

library
  exposed-modules:      QQLeLe.Asm,
                        QQLeLe.CFG,
                        QQLeLe.SSA,
                        QQLeLe.X86
  --other-modules:        --
  hs-source-dirs:       src
  build-depends:        base >=4.6,
                        bytestring >=0.10,
                        containers >=0.5,
                        mtl >=2.1

